--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,200;0,400;1,100&family=Oleo+Script&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    font-family: "Jost", sans-serif;
+}
